--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^0.8.5",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "hbs": "~3.1.0",
+    "mongoose": "^4.3.1",
+    "mongoose-unique-validator": "^0.6.2",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   }
